# banevade

./: .gitignore  CMakeLists.txt  main.h
src/: main.cpp
src/tools/helpers/: GetLastLine.cpp  GetLastLine.h
